--- a/sample/src/main/res/layout/activity_sample.xml
+++ b/sample/src/main/res/layout/activity_sample.xml
@@ -19,7 +19,9 @@
         android:layout_width="200dp"
         android:layout_height="64dp"
         android:layout_centerInParent="true"
-        app:backgroundColor="#20363D"
+        app:backgroundColor="#3f51b5"
+        app:activeColor="#004d40"
+        app:normalColor="#e0f2f1"
         android:layout_gravity="center"
         android:paddingBottom="32dp"/>
 
