--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="grey1">#5a7d8e</color>
+    <color name="grey2">#455a64</color>
+    <color name="yellow">#ffc107</color>
+    <color name="white">#ffffff</color>
 </resources>
